package edu.fiuba.algo3.modelo;

import java.util.HashMap;

public interface LugarDeInteres {
    String visitar(GradoDePolicia grado);
    Pista obtenerPista(GradoDePolicia grado);
}
