package edu.fiuba.algo3.modelo;

public interface Pista {
    public String mostrarPista();
    boolean consultarEstado(GradoDePolicia grado);
}
